@@ -1,6 +1,0 @@
-{
-    "accepted": true,
-    "last_acceptance_date": "2024-03-09T23:22:37.614410",
-    "show_agreement": false,
-    "license_id": "dce3dfdf-de6a-11ee-8c16-001a7dda7113"
-}
