@@ -89,8 +89,8 @@
                 "must_not_contain": [],
                 "possible_values": [],
                 "must_start_with": [
-                    "5",
-                    "4"
+                    "4",
+                    "5"
                 ],
                 "must_end_with": [],
                 "must_contain": [],
@@ -114,7 +114,7 @@
                     "past": false,
                     "present": false,
                     "future": false,
-                    "check_luhn": true,
+                    "check_luhn": false,
                     "only_upper": false,
                     "only_lower": false,
                     "change_to_upper": false,
@@ -2497,7 +2497,7 @@
                     "check_luhn": false,
                     "only_upper": false,
                     "only_lower": false,
-                    "change_to_upper": true,
+                    "change_to_upper": false,
                     "change_to_lower": false,
                     "do_not_validate": false
                 }
