@@ -1,0 +1,5 @@
+from enum import IntEnum
+
+
+class TabViewParams(IntEnum):
+    TABS_LIMIT = 100
